--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ node_js:
   - "5"
 install:
   - npm i -g elm
-  - npm i -g elm-test
   - elm package install -y
-script:
-  - elm test TestRunner.elm
+  - console_version=$(node -pe 'JSON.parse(process.argv[1])["laszlopandy/elm-console"]' "$(cat elm-stuff/exact-dependencies.json)")
+before_script:
+  - elm make --yes --output raw-test.js TestRunner.elm
+  - bash elm-stuff/packages/laszlopandy/elm-console/$console_version/elm-io.sh raw-test.js test.js
+script: node test.js
